--- a/Chrome Extension/LeadTracker/index.css
+++ b/Chrome Extension/LeadTracker/index.css
@@ -25,3 +25,11 @@ button {
 button:hover {
     cursor: pointer;
 }
+
+div {
+    width: 100%;
+    height: auto;
+    background-color:antiquewhite;
+    margin-top: 8px;
+    padding: 10px;
+}
